* fixed buy button visibility for tracks and albums which have been bought
Former-commit-id: 314c82e8bbfaa5da095a62d5150117e6e648f9ca
Former-commit-id: 3a367decf6584808ef42c2f1737ec0e36b6df87d

--- a/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
+++ b/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
@@ -551,6 +551,7 @@ li > input { width: 100% }
 }
 
 .order-block .buy-btn button,
+.order-block .buy-btn a,
 .buttons .buy-btn button {
     margin-top: 15px;
     width: 100px;
